backend/.kube/servidor/03-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arroz-api
  namespace: aplicacioncilla
spec:
  selector:
    matchLabels:
      aplicacion: arroz-api
  replicas: 1
  template:
    metadata:
      labels:
        aplicacion: arroz-api
    spec:
      containers:
        - name: api-arroz
          image: ggmartinez/laravel:php-82-Xdebug
          ports:
            - containerPort: 8001
