backend/.kube/servidor/03-MySQL.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: aplicacioncilla
spec:
  selector:
    matchLabels:
      aplicacion: mysql
  replicas: 1
  template:
    metadata:
      labels:
        aplicacion: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
              name: web
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data

      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
