backend/.kube/servidor/04-Services.yml
apiVersion: v1
kind: Service
metadata:
  name: arroz-api
  namespace: aplicacioncilla
spec:
  selector:
    aplicacion: arroz-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
