backend/.kube/servidor/05-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-load-balancer
  namespace: aplicacioncilla
spec:
  ingressClassName: traefik
  rules:
    - host: backend.aplicacioncilla.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arroz-api
                port:
                  number: 80
